<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apps.porty.radiopiremote.ListFragment">

    <TextView
        android:text="@string/lbl_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/lbl_youtube" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_youtube_link"
        android:ems="10"
        android:id="@+id/txt_youtube_link"
        android:inputType="textUri"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:layout_below="@+id/lbl_youtube"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_youtube_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_youtube_submit"
        android:onClick="btn_ctrl_onClick"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/txt_youtube_link"
        android:layout_toEndOf="@+id/txt_youtube_link" />
</RelativeLayout>
